--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -1,12 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="kronos_landing_page.css">
     <title>Landing Page</title>
 </head>
+
 <body>
-    
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <div class="container-fluid">
+
+            <!--Toggle Button-->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!--Unordered list-->
+                <ul class="navbar-nav me-auto mb-auto mb-lg-auto">
+                    <li class="nav-item">
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Customization</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
+                      </li>
+                    <!--Login-->
+                    <li class="nav-item">
+                        <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn1" data-bs-toggle="modal"
+                                data-bs-target="#LoginModal">
+                                Login
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="LoginModal" tabindex="-1" aria-labelledby="LoginModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header text-dark bg1">
+                                            <h5 class="modal-title" id="LoginModalLabel">Login</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body text-dark bg1">
+                                            <!--Form-->
+                                            <form>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputEmail1" class="form-label">Email
+                                                        address</label>
+                                                    <input type="email" class="form-control" id="exampleInputEmail1"
+                                                        aria-describedby="emailHelp">
+                                                    <div id="emailHelp" class="form-text">We'll never share your email
+                                                        with anyone else.</div>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputPassword1"
+                                                        class="form-label">Password</label>
+                                                    <input type="password" class="form-control"
+                                                        id="exampleInputPassword1">
+                                                </div>
+                                                <div class="mb-3 form-check">
+                                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                                    <label class="form-check-label" for="exampleCheck1">Check me
+                                                        out</label>
+                                                </div>
+                                                <button type="submit" class="btn btn-primary"
+                                                    data-bs-dismiss="modal">Submit</button>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer text-dark bg1">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <!--Sign Up-->
+                    <li class="nav-item">
+                        <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
+                            <!-- Button trigger modal -->
+                            <button type="button" class="btn btn1" data-bs-toggle="modal"
+                                data-bs-target="#SignupModal">
+                                Sign Up
+                            </button>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="SignupModal" tabindex="-1" aria-labelledby="SignupModalLabel"
+                                aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header text-light bg1">
+                                            <h5 class="modal-title" id="SignupModalLabel">Sign Up</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body text-light bg1">
+                                            <form>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputEmail1" class="form-label">Email
+                                                        address</label>
+                                                    <input type="email" class="form-control" id="exampleInputEmail2"
+                                                        aria-describedby="emailHelp">
+                                                    <div id="emailHelp2" class="form-text">We'll never share your email
+                                                        with anyone else.</div>
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputPassword1"
+                                                        class="form-label">Password</label>
+                                                    <input type="password" class="form-control"
+                                                        id="exampleInputPassword2">
+                                                </div>
+                                                <div class="mb-3">
+                                                    <label for="exampleInputPassword1" class="form-label">Confirm
+                                                        Password</label>
+                                                    <input type="password" class="form-control"
+                                                        id="exampleInputPassword3">
+                                                </div>
+                                                <button type="submit" class="btn btn-primary"
+                                                    data-bs-dismiss="modal">Submit</button>
+                                            </form>
+                                        </div>
+                                        <div class="modal-footer text-light bg1">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-bs-dismiss="modal">Close</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+    <i class="fa fa-duotone fa-cart-plus" style="font-size:3rem;"></i>
+
+        </div>
+    </nav>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+
 </html>
