--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="kronos_landing_page.css">
+    <link rel="stylesheet" href="kronos_landing_page.css">
     <title>Landing Page</title>
 </head>
 
@@ -27,17 +27,17 @@
                 <!--Unordered list-->
                 <ul class="navbar-nav me-auto mb-auto mb-lg-auto">
                     <li class="nav-item">
-                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Customization</a>
-                      </li>
-                      <li class="nav-item">
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
+                            href="#">Customization</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
-                      </li>
+                    </li>
                     <!--Login-->
                     <li class="nav-item">
                         <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn1" data-bs-toggle="modal"
-                                data-bs-target="#LoginModal">
+                            <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#LoginModal">
                                 Login
                             </button>
 
@@ -91,8 +91,7 @@
                     <li class="nav-item">
                         <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
                             <!-- Button trigger modal -->
-                            <button type="button" class="btn btn1" data-bs-toggle="modal"
-                                data-bs-target="#SignupModal">
+                            <button type="button" class="btn btn1" data-bs-toggle="modal" data-bs-target="#SignupModal">
                                 Sign Up
                             </button>
 
@@ -143,10 +142,92 @@
                     </li>
                 </ul>
             </div>
-    <i class="fa fa-duotone fa-cart-plus" style="font-size:3rem;"></i>
+            <i class="fa fa-duotone fa-cart-plus" style="font-size:3rem;"></i>
 
         </div>
     </nav>
+
+    <!--CAROUSELS-->
+
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="Images/carousel1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel3.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel4.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel5.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel6.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="Images/carousel7.jpg" style="background-image: cover;" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
