--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="kronos_landing_page.css">
@@ -229,12 +231,132 @@
         </button>
     </div>
 
+    <!--FEATURES-->
+
+    <div class="container px-4 py-5" id="hanging-icons">
+        <center>
+            <h2 class="pb-2 border-bottom">About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi atque dolor est sit delectus
+                perspiciatis laboriosam, ut, at minima id repellendus nisi dolores sunt dicta eveniet, quis accusantium
+                eum!
+                Esse, doloremque odio? Eius possimus doloribus natus provident. Velit, itaque illum? Placeat magnam sunt
+                eos incidunt sequi reiciendis neque, exercitationem inventore provident et quibusdam dignissimos itaque
+                animi molestiae unde sed.
+                Reprehenderit veritatis excepturi asperiores nesciunt voluptas ad? Rem hic id incidunt beatae, quam
+                sapiente praesentium quasi eveniet velit repellat consequatur debitis maxime, dolorum quia, culpa est
+                eum. Repellat, maiores nisi.</p>
+        </center>
+
+    </div>
+    <div class="container px-4 py-5" id="hanging-icons">
+        <center>
+            <h2 class="pb-2 border-bottom">Main Features</h2>
+        </center>
+
+
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+            <!--FIRST FEATURE-->
+            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+                    <i class="fas fa-cog" style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                </div>
+                <div>
+                    <h2>Customizations</h2>
+                    <p>Customized products for you or your company. Various Customizations available, visit custom
+                        watches section to learn more.</p>
+                </div>
+            </div>
+
+            <!--SECOND FEATURE-->
+            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+
+                    <i class="fas fa-drafting-compass"
+                        style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                </div>
+                <div>
+                    <h2>Uniqness</h2>
+                    <p>Our products are made with the finest and ecofriendly material, jut the perfect fit you want!</p>
+                </div>
+            </div>
+
+            <!--THIRD FEATURE-->
+            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+                    <i class="far fa-clock"
+                        style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                </div>
+                <div>
+                    <h2>Utilitarian</h2>
+                    <p>The main purpose of kronos is to make products which save your time, increase you productivity by
+                        adding features which are most beneficial.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Images-->
+
+    <div class="container pt-5" id="custom-cards">
+        <center>
+            <h2 class="pb-2 border-bottom">Some Images of our Products</h2>
+        </center>
+
+        <div class="row row-cols-3 align-items-stretch py-5">
+            <div class="col">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                    style="background-image: url(IMAGES/someimages1.jpg);">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Aquarius
+                        </h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                    style="background-image: url(IMAGES/someimage3.jpg);">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">The Moon meets Uranus</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
+                    style="background-image: url(IMAGES/someimages2.jpeg);">
+                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Discover variable star R Leonis</h2>
+                        <ul class="d-flex list-unstyled mt-auto">
+                            <li class="me-auto">
+                                <img src="../IMAGES/logo.png" alt="Bootstrap" width="32" height="32">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-    crossorigin="anonymous"></script>
+
 
 </html>
