Footer version 1 pushed

--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="kronos_landing_page.css">
+
+    <!--Arbutus Font-->
+    <link href='https://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet'>
     <title>Landing Page</title>
 </head>
 
@@ -348,6 +351,46 @@
             </div>
         </div>
     </div>
+
+    <!--FOOTER-->
+
+    <!--Main div-->
+    <div class="main">
+        <div class="share">
+            <br><br>
+            <p>SHARE THIS PAGE</p>
+            <!--Icons-->
+            <div class="icons">
+                <button type="button" class="btn btn-outline-success" title="Share this page on Facebook New tab"><i
+                        class="fab fa-facebook-f"></i></button>
+                <button type="button" class="btn btn-outline-success" title="Share this page on Twitter New tab"><i
+                        class="fab fa-twitter"></i></button>
+                <button type="button" class="btn btn-outline-success" title="Share this page on Pinterest New tab"><i
+                        class="fab fa-pinterest-p"></i></button>
+                <button type="button" class="btn btn-outline-success" title="Share this page on Linkedin New tab"><i
+                        class="fab fa-linkedin-in"></i></button>
+                <button type="button" class="btn btn-outline-success" title="Share this page on Email New tab"><i
+                        class="fa fa-envelope"></i></button>
+                <button type="button" class="btn btn-outline-success" title="View more social networks"><i
+                        class="fas fa-ellipsis-h"></i></button>
+                <br><br><br>
+            </div>
+        </div>
+
+        <div class="footer">
+            <div class="links">
+                <br>
+                <p>Footer <br> Features | About | Testimonials | Contact Us <br><br> Links to all pages, Landing Page,
+                    Customer Care, Social Media Handles and much more</p>
+            </div>
+            <!--Footer-->
+            <footer>
+                <br>
+                <i class="far fa-copyright"> Copyright 2021</i>
+            </footer>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
