Watches Section Version 2 pushed

--- a/Customizations Page/Customizations.html
+++ b/Customizations Page/Customizations.html
@@ -37,7 +37,7 @@
                             href="#">Customization</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="../Watches Page/Watches_Page.html">Watches</a>
                     </li>
                 </ul>
                 <!--Login-->
