--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -33,10 +33,10 @@
                 <ul class="navbar-nav me-auto mb-auto mb-lg-auto">
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="#">Customization</a>
+                            href="../Customizations Page/Customizations.html">Customization</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="../Watches Page/Watches_Page.html">Watches</a>
                     </li>
                 </ul>
                 <!--Login-->
