Watches page version 3 pushed

--- a/Watches Page/Watches_Page.html
+++ b/Watches Page/Watches_Page.html
@@ -233,7 +233,7 @@
     <!--CARDS-->
     <div class="container px-4 py-5" id="hanging-icons">
       <center>
-          <h2 class="pb-2 border-bottom">Luxury Watches</h2>
+          <h2 class="pb-2 border-bottom ">LUXURY WATCHES</h2>
       </center>
 
       <div class="album py-5 bg-light">
@@ -299,7 +299,7 @@
       </div>
 
       <center>
-          <h2 class="pb-2 border-bottom">Smart Watches</h2>
+          <h2 class="pb-2 border-bottom">SMART WATCHES</h2>
       </center>
       <div class="album py-5 bg-light">
           <div class="container">
@@ -364,7 +364,7 @@
       </div>
 
       <center>
-          <h2 class="pb-2 border-bottom">Vintage Watches</h2>
+          <h2 class="pb-2 border-bottom">VINTAGE WATCHES</h2>
       </center>
       <div class="album py-5 bg-light">
           <div class="container">
@@ -430,7 +430,7 @@
       </div>
 
       <center>
-          <h2 class="pb-2 border-bottom">Watches for Women</h2>
+          <h2 class="pb-2 border-bottom">WATCHES FOR WOMEN</h2>
       </center>
       <div class="album py-5 bg-light">
           <div class="container">
@@ -496,7 +496,7 @@
       </div>
 
       <center>
-          <h2 class="pb-2 border-bottom">Watches for kids</h2>
+          <h2 class="pb-2 border-bottom">WATCHES FOR KIDS</h2>
       </center>
       <div class="album py-5 bg-light">
           <div class="container">
