Features added to all the Pages

--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -19,9 +19,8 @@
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav title="Navbar" class="navbar fixed-top navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-
             <!--Toggle Button-->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -36,9 +35,12 @@
                             href="../Customizations Page/Customizations.html">Customization</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="../Watches Page/Watches_Page.html">Watches</a>
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
+                            href="../Watches Page/Watches_Page.html">Watches</a>
                     </li>
                 </ul>
+                <a class="navbar-brand brand d-flex justify-content-center"><img
+                        src="./Images/KRONOS_logo-removebg-preview-removebg-preview.png" alt="Logo" /></a>
                 <!--Login-->
                 <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
                     <!-- Button trigger modal -->
@@ -146,7 +148,7 @@
 
     <!--CAROUSELS-->
 
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" title="Carousel" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -228,65 +230,71 @@
 
     <!--FEATURES-->
 
-    <div class="container px-4 py-5" id="hanging-icons">
-        <center>
-            <h2 class="pb-2 border-bottom">About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam sequi atque dolor est sit delectus
-                perspiciatis laboriosam, ut, at minima id repellendus nisi dolores sunt dicta eveniet, quis accusantium
-                eum!
-                Esse, doloremque odio? Eius possimus doloribus natus provident. Velit, itaque illum? Placeat magnam sunt
-                eos incidunt sequi reiciendis neque, exercitationem inventore provident et quibusdam dignissimos itaque
-                animi molestiae unde sed.
-                Reprehenderit veritatis excepturi asperiores nesciunt voluptas ad? Rem hic id incidunt beatae, quam
-                sapiente praesentium quasi eveniet velit repellat consequatur debitis maxime, dolorum quia, culpa est
-                eum. Repellat, maiores nisi.</p>
-        </center>
+    <div class="descandfeat">
+        <div class="container px-4 py-3 just" id="hanging-icons">
+            <center>
+                <h2 class="pb-2 border-bottom">About Us</h2>
+                <p style="padding-top:1rem">Kronos is a manufacturer of customized watches. We at Kronos, sell watches
+                    according to the needs of yours by allowing you to customize our product according to your
+                    preferences.<br>Time does not wait for anyone. Those who manage to move along with it, find success
+                    in life. Who does not want to be successful? But first, we must understand it and we are here to
+                    help you with that with Kronos... Because you value <strong>‘TIME.’</strong></p>
+            </center>
 
-    </div>
-    <div class="container px-4 py-5" id="hanging-icons">
-        <center>
-            <h2 class="pb-2 border-bottom">Main Features</h2>
-        </center>
+        </div>
+        <div class="container px-4 py-5" id="hanging-icons">
+            <center>
+                <h2 class="pb-2 border-bottom">Main Features</h2>
+            </center>
 
 
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-            <!--FIRST FEATURE-->
-            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-                    <i class="fas fa-cog" style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <!--FIRST FEATURE-->
+                <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                    <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+                        <i class="fas fa-cog"
+                            style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                    </div>
+                    <div>
+                        <h2>Customizations</h2>
+                        <p>Customized products for you or your company. Various Customizations available, visit
+                            Customization section to learn more.</p>
+                    </div>
                 </div>
-                <div>
-                    <h2>Customizations</h2>
-                    <p>Customized products for you or your company. Various Customizations available, visit custom
-                        watches section to learn more.</p>
+
+                <!--SECOND FEATURE-->
+                <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                    <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+
+                        <i class="fas fa-drafting-compass"
+                            style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                    </div>
+                    <div>
+                        <h2>Uniqueness</h2>
+                        <p>Our products are made with the finest and ecofriendly material, jut the perfect fit you want!
+                        </p>
+                    </div>
+                </div>
+
+                <!--THIRD FEATURE-->
+                <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
+                    <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+                        <i class="far fa-clock"
+                            style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
+                    </div>
+                    <div>
+                        <h2>Utilitarian</h2>
+                        <p>The main purpose of <strong>Kronos</strong> is to make products which save your time,
+                            increase you productivity by
+                            adding features which are most beneficial.</p>
+                    </div>
                 </div>
             </div>
+            <center>
+                <p>Link to: <a href="../Customizations Page/Customizations.html"
+                        style="text-decoration: none;">Customization</a> Page</p>
 
-            <!--SECOND FEATURE-->
-            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-
-                    <i class="fas fa-drafting-compass"
-                        style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
-                </div>
-                <div>
-                    <h2>Uniqness</h2>
-                    <p>Our products are made with the finest and ecofriendly material, jut the perfect fit you want!</p>
-                </div>
-            </div>
-
-            <!--THIRD FEATURE-->
-            <div class="col d-flex align-items-start" style="padding-left: 30px;padding-right: 30px;">
-                <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
-                    <i class="far fa-clock"
-                        style="font-size: 90px; background-color: white; color: rgb(80, 80, 80);"></i>
-                </div>
-                <div>
-                    <h2>Utilitarian</h2>
-                    <p>The main purpose of kronos is to make products which save your time, increase you productivity by
-                        adding features which are most beneficial.</p>
-                </div>
-            </div>
+            </center>
         </div>
     </div>
 
