--- a/Customer Care Page/customer.html
+++ b/Customer Care Page/customer.html
@@ -12,21 +12,12 @@
         crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <style>
-        .container1,
-        .container2 {
-            background: linear-gradient(#f5f7fa21, #b8c6db) fixed;
-            border-radius: 10px;
-            margin-right: 35px;
-            margin-left: 35px;
-        }
-    </style>
+        <link rel="stylesheet" href="kronos_CustomerCare_Page.css">
 </head>
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light ">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light ">
         <div class="container-fluid">
 
             <!--Toggle Button-->
@@ -46,6 +37,8 @@
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
                     </li>
                 </ul>
+                <a class="navbar-brand brand d-flex justify-content-center"><img
+                    src="Images\KRONOS_logo-removebg-preview-removebg-preview.png" alt="Logo" /></a>
                 <!--Login-->
                 <div class="col-md-auto col-sm-auto col-auto" style="margin: 1vw;">
                     <!-- Button trigger modal -->
@@ -151,7 +144,7 @@
     </nav>
 
     <!--CONTACT NAVBAR-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid" style="background-color: #343A40; height: 50px;">
             <span style="color: white; margin-left: 12px;">CONTACT</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -160,7 +153,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
-    </nav>
+    </nav> -->
 
     <!--Paragraph-->
     <div class="main1" style="text-align: center;">
@@ -202,7 +195,7 @@
             </div>
 
             <!--Send Message Button-->
-            <button type="submit" class="btn btn-outline-secondary" style="margin: 10px;">
+            <button type="submit" class="btn  btn-outline-secondary" style="margin: 10px;">
                 Send message
             </button>
 
@@ -222,8 +215,8 @@
             <p><b>BUYING A KRONOS</b></p><br>
 
             <!--1st-->
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
+            <div class="accordion-item" >
+                <h2 class="accordion-header"  id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                         Where can I purchase a Kronos watch?
@@ -355,8 +348,9 @@
     </div><br><br>
 
     <!--Alert-->
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-primary alert-dismissible fade show" role="alert">
         REACH OUR TEAM! We love questions and feedback - and we're always happy to help! Your feedback is valuable!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
