--- a/Landing Page/kronos_landing_page.html
+++ b/Landing Page/kronos_landing_page.html
@@ -234,11 +234,11 @@
         <div class="container px-4 py-3 just" id="hanging-icons">
             <center>
                 <h2 class="pb-2 border-bottom">About Us</h2>
-                <p style="padding-top:1rem">Kronos is a manufacturer of customized watches. We at Kronos, sell watches
+                <p style="padding-top:1rem">KRONOS is a manufacturer of customized watches. We at KRONOS, sell watches
                     according to the needs of yours by allowing you to customize our product according to your
                     preferences.<br>Time does not wait for anyone. Those who manage to move along with it, find success
                     in life. Who does not want to be successful? But first, we must understand it and we are here to
-                    help you with that with Kronos... Because you value <strong>‘TIME.’</strong></p>
+                    help you with that with KRONOS... Because you value <strong>‘TIME.’</strong></p>
             </center>
 
         </div>
