--- a/Customer Care Page/customer.html
+++ b/Customer Care Page/customer.html
@@ -31,17 +31,17 @@
                 <ul class="navbar-nav me-auto mb-auto mb-lg-auto">
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="#">Customization</a>
+                            href="../Customizations Page/Customizations.html">Customization</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="#">Watches</a>
+                        <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page" href="../Watches Page/Watches_Page.html">Watches</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="../Customizations Page/Customizations.html">Customer Care</a>
+                            href="customer.html">Customer Care</a>
                     </li>
                 </ul>
-                <a class="navbar-brand brand d-flex justify-content-center"><img
+                <a class="navbar-brand brand d-flex justify-content-center" href="../index.html"><img
                         src="Images\KRONOS_logo-removebg-preview-removebg-preview.png" alt="Logo" /></a>
                 <!--Login-->
 
