--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="../Customizations Page/Customizations.html">Customer Care</a>
+                            href="./Customer Care Page/customer.html">Customer Care</a>
                     </li>
                 </ul>
                 <a class="navbar-brand brand d-flex justify-content-center"><img
