--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <div class="row row-cols-3 align-items-stretch py-5">
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url(IMAGES/someimages1.jpg);">
+                    style="background-image: url(Images/someimages1.jpg);">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Aquarius
                         </h2>
@@ -295,7 +295,7 @@
 
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url(IMAGES/someimage3.jpg);">
+                    style="background-image: url(Images/someimages2.jpeg);">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">The Moon meets Uranus</h2>
                         <ul class="d-flex list-unstyled mt-auto">
@@ -310,7 +310,7 @@
 
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg"
-                    style="background-image: url(IMAGES/someimages2.jpeg);">
+                    style="background-image: url(Images/KRONOS_logo-removebg-preview-removebg-preview.png);">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                         <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Discover variable star R Leonis</h2>
                         <ul class="d-flex list-unstyled mt-auto">
