--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <ul class="navbar-nav me-auto mb-auto mb-lg-auto">
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="../Customizations Page/Customizations.html">Customization</a>
+                            href="./Customizations Page/Customizations.html">Customization</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
-                            href="../Watches Page/Watches_Page.html">Watches</a>
+                            href="./Watches Page/Watches_Page.html">Watches</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mt-1" style="font-size: 1.5rem;" aria-current="page"
